[gd_scene load_steps=57 format=2]

[ext_resource path="res://Level Objects/Launcher/Launcher.gd" type="Script" id=1]
[ext_resource path="res://Sprites/MineArming.png" type="Texture" id=2]
[ext_resource path="res://Sprites/MineIdle.png" type="Texture" id=3]
[ext_resource path="res://Sprites/MineDet.png" type="Texture" id=4]
[ext_resource path="res://Fonts/pixelmix.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Sprites/MineDet2-1.png" type="Texture" id=6]
[ext_resource path="res://Sprites/MineDet2-2.png" type="Texture" id=7]
[ext_resource path="res://Sounds/explosion (1).wav" type="AudioStream" id=8]

[sub_resource type="CircleShape2D" id=1]
radius = 19.0

[sub_resource type="CircleShape2D" id=2]
radius = 112.0

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 112, 112 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 112, 0, 112, 112 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 224, 0, 112, 112 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 336, 0, 112, 112 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 448, 0, 112, 112 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 560, 0, 112, 112 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 672, 0, 112, 112 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 784, 0, 112, 112 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 896, 0, 112, 112 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 1008, 0, 112, 112 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 112, 112 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 4 )
region = Rect2( 112, 0, 112, 112 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 4 )
region = Rect2( 224, 0, 112, 112 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 4 )
region = Rect2( 336, 0, 112, 112 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 4 )
region = Rect2( 448, 0, 112, 112 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 4 )
region = Rect2( 560, 0, 112, 112 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 4 )
region = Rect2( 672, 0, 112, 112 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 4 )
region = Rect2( 784, 0, 112, 112 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 4 )
region = Rect2( 896, 0, 112, 112 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 160, 160 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 6 )
region = Rect2( 160, 0, 160, 160 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 6 )
region = Rect2( 320, 0, 160, 160 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 6 )
region = Rect2( 480, 0, 160, 160 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 6 )
region = Rect2( 640, 0, 160, 160 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 6 )
region = Rect2( 800, 0, 160, 160 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 6 )
region = Rect2( 960, 0, 160, 160 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 6 )
region = Rect2( 1120, 0, 160, 160 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 6 )
region = Rect2( 1280, 0, 160, 160 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 160, 160 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 7 )
region = Rect2( 160, 0, 160, 160 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 7 )
region = Rect2( 320, 0, 160, 160 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 7 )
region = Rect2( 480, 0, 160, 160 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 7 )
region = Rect2( 640, 0, 160, 160 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 7 )
region = Rect2( 800, 0, 160, 160 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 7 )
region = Rect2( 960, 0, 160, 160 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 7 )
region = Rect2( 1120, 0, 160, 160 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 7 )
region = Rect2( 1280, 0, 160, 160 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 112, 112 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 3 )
region = Rect2( 112, 0, 112, 112 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 3 )
region = Rect2( 224, 0, 112, 112 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 3 )
region = Rect2( 336, 0, 112, 112 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 3 )
region = Rect2( 448, 0, 112, 112 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 3 )
region = Rect2( 560, 0, 112, 112 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 3 )
region = Rect2( 672, 0, 112, 112 )

[sub_resource type="SpriteFrames" id=29]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "Arming",
"speed": 15.0
}, {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ) ],
"loop": true,
"name": "Det",
"speed": 15.0
}, {
"frames": [ SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ) ],
"loop": true,
"name": "Det2-1",
"speed": 30.0
}, {
"frames": [ SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ) ],
"loop": true,
"name": "Det2-2",
"speed": 30.0
}, {
"frames": [ SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ) ],
"loop": true,
"name": "Idle",
"speed": 15.0
} ]

[sub_resource type="DynamicFont" id=30]
size = 12
font_data = ExtResource( 5 )

[node name="Launcher" type="StaticBody2D" groups=["Mines"]]
script = ExtResource( 1 )
strength = 50000
lineUnderLength = 44
textHeight = 20

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 2, 2 )
frames = SubResource( 29 )
animation = "Idle"
frame = 2
playing = true

[node name="HUDLines" type="Line2D" parent="."]
position = Vector2( 112, 0 )
points = PoolVector2Array( 0, 0, 46, 0, 86, 0 )
width = 2.0
default_color = Color( 0.960784, 0.619608, 0.168627, 1 )

[node name="Meter" type="Label" parent="HUDLines"]
self_modulate = Color( 0.960784, 0.619608, 0.168627, 1 )
margin_top = -16.0
margin_right = 51.0
margin_bottom = -1.0
custom_fonts/font = SubResource( 30 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -4.76837e-07, -101 )
scale = Vector2( 1.4, 1 )

[node name="Splode" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_offscreen"]
[connection signal="finished" from="Splode" to="." method="_on_Splode_finished"]
